Finish update methods section

--- a/_analysis/ms.qmd
+++ b/_analysis/ms.qmd
@@ -271,6 +271,12 @@ Existing preregistration formats are designed primarily for study authors; they 
 
 We conducted a literature review to identify a modelling workflow suitable for application to a range of different modelling goals, e.g. exploration, inference and prediction, including both explanatory and anticipatory predictions [@Tredennick2021; @Mouquet2015; @Maris2018; @Shmueli:2010ec]; research contributions, e.g. development of new methods, or application / extension of existing methods and model transfers [@Yates2018]; types of models, e.g. phenomenological vs. mechanistic [@Connolly2017; @White2019; @lewis2023], across basic and applied contexts and across fields / disciplines in ecology and conservation [@Carmel2013; @Brudvig2017] while offering prescriptive guidelines based on ‘Good Modelling Practice’ [@Augusiak:2014gz]. The final output was a workflow reflecting a balance between idealised and actual modelling in practice.
 
+## Designing the Preregistration Template
+
+We facilitated a workshop with 10 ecologists and ecological modellers. A key task was to identifycommon modelling workflows and critical decision-steps in model development. ‘Critical’ decision-steps are points in the modelling process where researchers, or modellers, make analytical decisions that could change the output of the analysis. In this activity, workshop participants first individually reflected on their own scientific process for a recent or memorable research project, listing the steps undertaken throughout the process. Next, participants collaboratively mapped the decision steps in their own personal modelling workflows onto a pre-prepared modelling workflow template (<https://osf.io/fgd23>), informed by our general workflow. We then collaboratively reviewed and refined the modelling workflow into a standard set of key modelling phases and commonly implemented decision steps.
+
+## Developing an Adaptive Preregistration Methodology
+
 We developed an Adaptive Preregistration methodology, so that users have the flexibility to adapt the preregistration template to their own needs and processes [see user guide <https://egouldo.github.io/EcoConsPreReg/>, @gould2024]. This can be facilitated in two ways: 1). The preregistration author can supply analytical or modelling heuristics or strategies that depend on the outcome of the previous decision-point or analysis, for example, decision-trees for certain points in the analysis or items in the preregistration template could be preregistered prior to analysing [@Baldwin2022a]. 2) using interim preregistrations that mark the transition between phases of modelling and analysis as different parts of the data are observed [@Srivastava2018].
 
 Modellers can preregister ‘plans to deploy flexible strategies’ [@Srivastava2018] describing heuristics consisting of multiple analysis or modelling strategies, whose execution depends on the outcome of previous decision-points or analyses. For example, the modeller can preregister a ‘decision-tree’ [@Baldwin2022a] consisting of pre-defined rules about when a particular modelling strategy or decision should be implemented. Modellers can specify a ‘flexible’ strategy within their preregistration when faced with methodological or analytic uncertainty that cannot be resolved without observing parts of the data or by engaging in preliminary analyses, model checking, or other data-dependent decisions.
@@ -279,10 +285,10 @@ The modeller may follow an iterative process of preregistration in parallel with
 
 Last, to facilitate transparency and preregistration checking of flexible modelling and analysis strategies, the results of any final and preliminary analyses must be linked back to the preregistered flexible strategy such that the link between a particular triggered analysis decision, and the analysis outcome that triggered the decision is explicit. Fig. 2 demonstrates a generalised process for using git and GitHub as the vehicle for transparently documenting Adaptive Preregistration of a modelling study. The procedure leverages [GitHub’s tag and release feature](https://help.github.com/en/github/administering-a-repository/releasing-projects-on-github) in conjunction with [Semantic Versioning](https://egouldo.github.io/EcoConsPreReg/(https:/semver.org/)) to track, document and collaborate on changes to the preregistration document. The preregistration is stored alongside modelling code and results with GitHub issues [see @braga2023 for explanation] tracking analysis tasks and results for a discrete task described in the preregistration and providing the opportunity to document interpretation of discussion informing the rationale for potential changes or updates to the preregistration that generate interim preregistrations. The use GitHub issues is particularly handy for registered flexible analyses: the outcome of the registered flexible analysis is recorded within that issue, linked to the described heuristic, and modellers can use the discussion features to document interpretation of those results, and provide interpretation to explain which registered decision alternative is to be selected in light of those results.
 
-## Designing the Preregistration Template
-
-We facilitated a workshop with 10 ecologists and ecological modellers. A key task was to identifycommon modelling workflows and critical decision-steps in model development. ‘Critical’ decision-steps are points in the modelling process where researchers, or modellers, make analytical decisions that could change the output of the analysis. In this activity, workshop participants first individually reflected on their own scientific process for a recent or memorable research project, listing the steps undertaken throughout the process. Next, participants collaboratively mapped the decision steps in their own personal modelling workflows onto a pre-prepared modelling workflow template (<https://osf.io/fgd23>), informed by our general workflow. We then collaboratively reviewed and refined the modelling workflow into a standard set of key modelling phases and commonly implemented decision steps.
-
 <!--# Insert Figure 2 - Adaptive Preregistration Workflow -->
 
 Figure 2 - Implementing Adaptive Preregistration. The preregistration (blue steps) and modelling and analysis processes (orange steps) operate in parallel. Purple tags represent git tags, corresponding to incremental versions of the preregistration.  Any changes to the analysis plan receive a GitHub release and major version number increment. Step 3 corresponds to the initial preregistration document, Step 6 corresponds to an interim preregistration, and Step 8 corresponds to the final preregistration. The execution of the Final Preregistration occurs in Step 9.
+
+## Evaluating and Refining Adaptive Preregistration with a Case Study
+
+We preregistered a real-world model-based research problem as a case-study for evaluating and testing the Preregistration Template and proposed Adaptive Preregistration methodology. The case study analysed the effectiveness of environmental flows on maintaining riparian vegetation condition in Victoria, Australia [@Tonkin2020]. We captured the case-study researchers’ feedback about the Preregistration Template and Adaptive Preregistration methodology using the version-control and collaborative project management features of git and GitHub [@BenBondLamberty:2018by; @Blischak:2016kr; @braga2023]. We used these tools for documenting both the analytic decisions of the researcher, and for using the preregistration process itself to ‘live-develop’ the template. For example, if it turned out that we had missed an important item, or the order and structure of the template needed to change in the process of completing the preregistration, the suggested change and its justification would be both recorded in GitHub. We also conducted follow-up semi-structured interviews to capture more detailed reflections of the case-study researchers.
