--- a/_analysis/references_obsidian.bib
+++ b/_analysis/references_obsidian.bib
@@ -24886,3 +24886,201 @@
 	doi = {10.31234/osf.io/cj5mh},
 	langid = {en}
 }
+
+@article{micheletti2024,
+	title = {Beyond guides, protocols and acronyms: Adoption of good modelling practices depends on challenging academia's status quo in ecology},
+	author = {Micheletti, Tatiane and Wimmler, Marie-Christin and Berger, Uta and Grimm, Volker and McIntire, Eliot J.},
+	year = {2024},
+	month = {10},
+	date = {2024-10},
+	journal = {Ecological Modelling},
+	pages = {110829},
+	volume = {496},
+	doi = {10.1016/j.ecolmodel.2024.110829},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0304380024002175},
+	note = {Citation Key: micheletti2024},
+	langid = {en}
+}
+
+@misc{peters2021,
+	title = {preregr: Specify (Pre)Registrations and Export Them Human- And Machine-Readably},
+	author = {Peters, Gjalt-Jorn},
+	doi = {10.32614/CRAN.package.preregr},
+	langid = {en}
+}
+
+@article{brodeur2024,
+	title = {Do Preregistration and Preanalysis Plans Reduce {\emph{p}} -Hacking and Publication Bias? Evidence from 15,992 Test Statistics and Suggestions for Improvement},
+	author = {Brodeur, Abel and Cook, Nikolai M. and Hartley, Jonathan S. and Heyes, Anthony},
+	year = {2024},
+	month = {08},
+	date = {2024-08-01},
+	journal = {Journal of Political Economy Microeconomics},
+	pages = {527--561},
+	volume = {2},
+	number = {3},
+	doi = {10.1086/730455},
+	url = {https://www.journals.uchicago.edu/doi/10.1086/730455},
+	note = {Citation Key: brodeur2024},
+	langid = {en}
+}
+
+@article{popovic2024,
+	title = {Four principles for improved statistical ecology},
+	author = {Popovic, Gordana and Mason, Tanya Jane and Drobniak, Szymon Marian and Marques, {Tiago André} and Potts, Joanne and Joo, {Rocío} and Altwegg, Res and Burns, Carolyn Claire Isabelle and McCarthy, Michael Andrew and Johnston, Alison and Nakagawa, Shinichi and McMillan, Louise and Devarajan, Kadambari and Taggart, Patrick Leo and Wunderlich, Alison and Mair, Magdalena M. and {Martínez{-}Lanfranco}, {Juan Andrés} and Lagisz, Malgorzata and Pottier, Patrice},
+	year = {2024},
+	month = {01},
+	date = {2024-01-15},
+	journal = {Methods in Ecology and Evolution},
+	pages = {2041--210X.14270},
+	doi = {10.1111/2041-210X.14270},
+	url = {https://besjournals.onlinelibrary.wiley.com/doi/10.1111/2041-210X.14270},
+	note = {Citation Key: popovic2024},
+	langid = {en}
+}
+
+@article{willroth2024,
+	title = {Best Laid Plans: A Guide to Reporting Preregistration Deviations},
+	author = {Willroth, Emily C and Atherton, Olivia E},
+	year = {2024},
+	date = {2024},
+	note = {Citation Key: willroth2024},
+	langid = {en}
+}
+
+@article{Lakens2024,
+	title = {When and How to Deviate From a Preregistration},
+	author = {Lakens, {Daniël}},
+	year = {2024},
+	month = {05},
+	date = {2024-05-14},
+	journal = {Collabra: Psychology},
+	pages = {117094},
+	volume = {10},
+	number = {1},
+	doi = {10.1525/collabra.117094},
+	url = {https://online.ucpress.edu/collabra/article/10/1/117094/200749/When-and-How-to-Deviate-From-a-Preregistration},
+	note = {Citation Key: Lakens2024},
+	langid = {en}
+}
+
+@article{Makel2023,
+	title = {Both Questionable and Open Research Practices Are Prevalent in Education Research},
+	author = {Makel, Matthew C and Hodges, Jaret and Cook, Bryan G and Plucker, Jonathan A},
+	year = {2023},
+	date = {2023},
+	note = {Citation Key: Makel2023},
+	langid = {en}
+}
+
+@inproceedings{pu2019a,
+	title = {CHI '19: CHI Conference on Human Factors in Computing Systems},
+	author = {Pu, Xiaoying and Zhu, Licheng and Kay, Matthew and Conrad, Frederick},
+	year = {2019},
+	month = {05},
+	date = {2019-05-02},
+	publisher = {ACM},
+	pages = {1--6},
+	doi = {10.1145/3290607.3312862},
+	url = {https://dl.acm.org/doi/10.1145/3290607.3312862},
+	note = {Citation Key: pu2019a},
+	address = {Glasgow Scotland Uk},
+	langid = {en}
+}
+
+@article{Siepe2023,
+	title = {Simulation Studies for Methodological Research in Psychology: A Standardized Template for Planning, Preregistration, and Reporting},
+	author = {Siepe, {Björn S.} and {Barto{\v{s}}}, {Franti{\v{s}}ek} and Morris, Tim P and Boulesteix, Anne-Laure and Heck, Daniel W. and Pawel, Samuel},
+	doi = {10.31234/osf.io/ufgy6},
+	langid = {en}
+}
+
+@article{Arnold2020,
+	title = {From ad-hoc modelling to strategic infrastructure: A manifesto for model management},
+	author = {Arnold, Thorsten and Joseph H. A. Guillaume,  and Guillaume, Joseph H. A. and Tuomas J. Lahtinen,  and Lahtinen, Tuomas J. and W. Vervoort,  and Vervoort, R. Willem},
+	year = {2020},
+	month = {01},
+	date = {2020-01-01},
+	journal = {Environmental Modelling and Software},
+	pages = {104563},
+	volume = {123},
+	doi = {10.1016/j.envsoft.2019.104563},
+	note = {DOI: 10.1016/j.envsoft.2019.104563
+MAG ID: 2981046865
+Citation Key: Arnold2020}
+}
+
+@book{Chang2004,
+	title = {Inventing temperature: Measurement and scientific progress.},
+	author = {Chang, Hasock},
+	year = {2004},
+	date = {2004},
+	publisher = {Oxford University Press},
+	note = {Citation Key: Chang2004},
+	address = {New York}
+}
+
+@article{Elliot2012,
+	title = {Epistemic and methodological iteration in scientific research},
+	author = {Elliott, Kevin C.},
+	year = {2012},
+	date = {2012},
+	journal = {Studies in History and Philosophy of Science Part A},
+	pages = {376--382},
+	volume = {43},
+	number = {2},
+	doi = {10.1016/j.shpsa.2011.12.034},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0039368112000039},
+	note = {Citation Key: Elliot2012},
+	langid = {en}
+}
+
+@techreport{Tonkin2020,
+	title = {Victorian Environmental Flows Monitoring and Assessment Program},
+	author = {Tonkin, Z and Jones, C and Clunie, P and Vivian, L and Amtstaetter, F and Jones, M and Koster, W and Mole, B and {O{\textquoteright}Connor}, J and Brooks, J and Caffrey, L and Lyon, J},
+	year = {2020},
+	date = {2020},
+	note = {Citation Key: Tonkin2020},
+	address = {Heidelberg, Victoria},
+	langid = {en}
+}
+
+@article{Neoh2023,
+	title = {Fifty years of research on questionable research practises in science: quantitative analysis of co-citation patterns},
+	author = {Neoh, Michelle Jin Yee and Carollo, Alessandro and Lee, Albert and Esposito, Gianluca},
+	year = {2023},
+	month = {10},
+	date = {2023-10},
+	journal = {Royal Society Open Science},
+	pages = {230677},
+	volume = {10},
+	number = {10},
+	doi = {10.1098/rsos.230677},
+	url = {https://royalsocietypublishing.org/doi/10.1098/rsos.230677},
+	note = {Citation Key: Neoh2023},
+	langid = {en}
+}
+
+@article{Gould2025,
+	title = {Same data, different analysts: variation in effect sizes due to analytical decisions in ecology and evolutionary biology},
+	author = {Gould, Elliot and Fraser, Hannah S. and Parker, Timothy H. and Nakagawa, Shinichi and Griffith, Simon C. and Vesk, Peter A. and Fidler, Fiona and Hamilton, Daniel G. and Abbey-Lee, Robin N. and Abbott, Jessica K. and Aguirre, Luis A. and Alcaraz, Carles and Aloni, Irith and Altschul, Drew and Arekar, Kunal and Atkins, Jeff W. and Atkinson, Joe and Baker, Christopher M. and Barrett, Meghan and Bell, Kristian and Bello, Suleiman Kehinde and {Beltrán}, {Iván} and Berauer, Bernd J. and Bertram, Michael Grant and Billman, Peter D. and Blake, Charlie K. and Blake, Shannon and Bliard, Louis and Bonisoli-Alquati, Andrea and Bonnet, {Timothée} and Bordes, Camille Nina Marion and Bose, Aneesh P. H. and Botterill-James, Thomas and Boyd, Melissa Anna and Boyle, Sarah A. and Bradfer-Lawrence, Tom and Bradham, Jennifer and Brand, Jack A. and Brengdahl, Martin I. and Bulla, Martin and {Bussière}, Luc and Camerlenghi, Ettore and Campbell, Sara E. and Campos, Leonardo L. F. and Caravaggi, Anthony and Cardoso, Pedro and Carroll, Charles J. W. and Catanach, Therese A. and Chen, Xuan and Chik, Heung Ying Janet and Choy, Emily Sarah and Christie, Alec Philip and Chuang, Angela and Chunco, Amanda J. and Clark, Bethany L. and Contina, Andrea and Covernton, Garth A. and Cox, Murray P. and Cressman, Kimberly A. and Crotti, Marco and Crouch, Connor Davidson and {D{\textquoteright}Amelio}, Pietro B. and De Sousa, Alexandra Allison and {Döbert}, Timm Fabian and Dobler, Ralph and Dobson, Adam J. and Doherty, Tim S. and Drobniak, Szymon Marian and Duffy, Alexandra Grace and Duncan, Alison B. and Dunn, Robert P. and Dunning, Jamie and Dutta, Trishna and Eberhart-Hertel, Luke and Elmore, Jared Alan and Elsherif, Mahmoud Medhat and English, Holly M. and Ensminger, David C. and Ernst, Ulrich Rainer and Ferguson, Stephen M. and Fernandez-Juricic, Esteban and Ferreira-Arruda, Thalita and Fieberg, John and Finch, Elizabeth A. and Fiorenza, Evan A. and Fisher, David N. and Fontaine, {Amélie} and Forstmeier, Wolfgang and Fourcade, Yoan and Frank, Graham S. and Freund, Cathryn A. and Fuentes-Lillo, Eduardo and Gandy, Sara L. and Gannon, Dustin G. and {García-Cervigón}, Ana I. and Garretson, Alexis C. and Ge, Xuezhen and Geary, William L. and {Géron}, Charly and Gilles, Marc and Girndt, Antje and Gliksman, Daniel and Goldspiel, Harrison B. and Gomes, Dylan G. E. and Good, Megan Kate and Goslee, Sarah C. and Gosnell, J. Stephen and Grames, Eliza M. and Gratton, Paolo and Grebe, Nicholas M. and Greenler, Skye M. and Griffioen, Maaike and Griffith, Daniel M. and Griffith, Frances J. and Grossman, Jake J. and {Güncan}, Ali and Haesen, Stef and Hagan, James G. and Hager, Heather A. and Harris, Jonathan Philo and Harrison, Natasha Dean and Hasnain, Sarah Syedia and Havird, Justin Chase and Heaton, Andrew J. and Herrera-Chaustre, {María Laura} and Howard, Tanner J. and Hsu, Bin-Yan and Iannarilli, Fabiola and Iranzo, Esperanza C. and Iverson, Erik N. K. and Jimoh, Saheed Olaide and Johnson, Douglas H. and Johnsson, Martin and Jorna, Jesse and Jucker, Tommaso and Jung, Martin and {Ka{\v{c}}ergyt{\.{e}}}, Ineta and Kaltz, Oliver and Ke, Alison and Kelly, Clint D. and Keogan, Katharine and Keppeler, Friedrich Wolfgang and Killion, Alexander K. and Kim, Dongmin and Kochan, David P. and Korsten, Peter and Kothari, Shan and Kuppler, Jonas and Kusch, Jillian M. and Lagisz, Malgorzata and Lalla, Kristen Marianne and Larkin, Daniel J. and Larson, Courtney L. and Lauck, Katherine S. and Lauterbur, M. Elise and Law, Alan and {Léandri-Breton}, Don-Jean and Lembrechts, Jonas J. and {L{\textquoteright}Herpiniere}, Kiara and Lievens, Eva J. P. and De Lima, Daniela Oliveira and Lindsay, Shane and Luquet, Martin and MacLeod, Ross and Macphie, Kirsty H. and Magellan, Kit and Mair, Magdalena M. and Malm, Lisa E. and Mammola, Stefano and Mandeville, Caitlin P. and Manhart, Michael and Manrique-Garzon, Laura Milena and {Mäntylä}, Elina and Marchand, Philippe and Marshall, Benjamin Michael and Martin, Charles A. and Martin, Dominic Andreas and Martin, Jake Mitchell and Martinig, April Robin and McCallum, Erin S. and McCauley, Mark and McNew, Sabrina M. and Meiners, Scott J. and Merkling, Thomas and Michelangeli, Marcus and Moiron, Maria and Moreira, Bruno and Mortensen, Jennifer and Mos, Benjamin and Muraina, Taofeek Olatunbosun and Murphy, Penelope Wrenn and Nelli, Luca and {Niemelä}, Petri and Nightingale, Josh and Nilsonne, Gustav and Nolazco, Sergio and Nooten, Sabine S. and Novotny, Jessie Lanterman and Olin, Agnes Birgitta and Organ, Chris L. and Ostevik, Kate L. and Palacio, Facundo Xavier and Paquet, Matthieu and Parker, Darren James and Pascall, David J. and Pasquarella, Valerie J. and Paterson, John Harold and Payo-Payo, Ana and Pedersen, Karen Marie and Perez, {Grégoire} and Perry, Kayla I. and Pottier, Patrice and Proulx, Michael J. and Proulx, {Raphaël} and Pruett, Jessica L and Ramananjato, Veronarindra and Randimbiarison, Finaritra Tolotra and Razafindratsima, Onja H. and Rennison, Diana J. and Riva, Federico and Riyahi, Sepand and Roast, Michael James and Rocha, Felipe Pereira and Roche, Dominique G. and {Román-Palacios}, Cristian and Rosenberg, Michael S. and Ross, Jessica and Rowland, Freya E. and Rugemalila, Deusdedith and Russell, Avery L. and Ruuskanen, Suvi and Saccone, Patrick and Sadeh, Asaf and Salazar, Stephen M. and Sales, Kris and {Salmón}, Pablo and {Sánchez-Tójar}, Alfredo and Santos, Leticia Pereira and Santostefano, Francesca and Schilling, Hayden T. and Schmidt, Marcus and Schmoll, Tim and Schneider, Adam C. and Schrock, Allie E. and Schroeder, Julia and Schtickzelle, Nicolas and Schultz, Nick L. and Scott, Drew A. and Scroggie, Michael Peter and Shapiro, Julie Teresa and Sharma, Nitika and Shearer, Caroline L. and {Simón}, Diego and Sitvarin, Michael I. and Skupien, {Fabrício Luiz} and Slinn, Heather Lea and Smith, Grania Polly and Smith, Jeremy A. and Sollmann, Rahel and Whitney, Kaitlin Stack and Still, Shannon Michael and Stuber, Erica F. and Sutton, Guy F. and Swallow, Ben and Taff, Conor Claverie and Takola, Elina and Tanentzap, Andrew J. and Tarjuelo, {Rocío} and Telford, Richard J. and Thawley, Christopher J. and Thierry, Hugo and Thomson, Jacqueline and Tidau, Svenja and Tompkins, Emily M. and Tortorelli, Claire Marie and Trlica, Andrew and Turnell, Biz R. and Urban, Lara and Van De Vondel, Stijn and Van Der Wal, Jessica Eva Megan and Van Eeckhoven, Jens and Van Oordt, Francis and Vanderwel, K. Michelle and Vanderwel, Mark C. and Vanderwolf, Karen J. and {Vélez}, Juliana and Vergara-Florez, Diana Carolina and Verrelli, Brian C. and Vieira, {Marcus Vinícius} and Villamil, Nora and Vitali, Valerio and Vollering, Julien and Walker, Jeffrey and Walker, Xanthe J. and Walter, Jonathan A. and Waryszak, Pawel and Weaver, Ryan J. and {Wedegärtner}, Ronja E. M. and Weller, Daniel L. and Whelan, Shannon and White, Rachel Louise and Wolfson, David William and Wood, Andrew and Yanco, Scott W. and Yen, Jian D. L. and Youngflesh, Casey and Zilio, Giacomo and Zimmer, {Cédric} and Zimmerman, Gregory Mark and Zitomer, Rachel A.},
+	year = {2025},
+	month = {02},
+	date = {2025-02-06},
+	journal = {BMC Biology},
+	pages = {35},
+	volume = {23},
+	number = {1},
+	doi = {10.1186/s12915-024-02101-x},
+	url = {https://bmcbiol.biomedcentral.com/articles/10.1186/s12915-024-02101-x},
+	note = {Citation Key: Gould2025},
+	langid = {en}
+}
+
+@Manual{Allaire2024,
+  title = {quarto: R Interface to 'Quarto' Markdown Publishing System},
+  author = {JJ Allaire and Christophe Dervieux},
+  year = {2024},
+  note = {R package version 1.4},
+  url = {https://CRAN.R-project.org/package=quarto},
+}
