--- a/_analysis/references_obsidian.bib
+++ b/_analysis/references_obsidian.bib
@@ -16656,7 +16656,7 @@
   file = {/Users/elliotgould/Zotero/storage/SGRDB4TT/Nyberg-2006-Can._J._For._Res.pdf}
 }
 
-@article{O'Dea2021,
+@article{ODea2021,
   title = {Towards Open, Reliable, and Transparent Ecology and Evolutionary Biology},
   author = {O'Dea, Rose E. and Parker, Timothy H. and Chee, Yung En and Culina, Antica and Drobniak, Szymon M. and Duncan, David H. and Fidler, Fiona and Gould, Elliot and Ihle, Malika and Kelly, Clint D. and Lagisz, Malgorzata and Roche, Dominique G. and {S{\'a}nchez-T{\'o}jar}, Alfredo and Wilkinson, David P. and Wintle, Bonnie C. and Nakagawa, Shinichi},
   year = {2021},
@@ -25083,4 +25083,35 @@ Citation Key: Arnold2020}
   year = {2024},
   note = {R package version 1.4},
   url = {https://CRAN.R-project.org/package=quarto},
+}
+@article{koivisto2024,
+	title = {Are Open Science instructions targeted to ecologists and evolutionary biologists sufficient? A literature review of guidelines and journal data policies},
+	author = {Koivisto, Elina and {Mäntylä}, Elina},
+	year = {2024},
+	month = {07},
+	date = {2024-07},
+	journal = {Ecology and Evolution},
+	pages = {e11698},
+	volume = {14},
+	number = {7},
+	doi = {10.1002/ece3.11698},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/ece3.11698},
+	note = {Citation Key: koivisto2024},
+	langid = {en}
+}
+
+@article{bodner2021,
+	title = {Bridging the divide between ecological forecasts and environmental decision making},
+	author = {Bodner, Korryn and Rauen Firkowski, Carina and Bennett, Joseph R. and Brookson, Cole and Dietze, Michael and Green, Stephanie and Hughes, Josie and Kerr, Jeremy and {Kunegel{-}Lion}, {Mélodie} and Leroux, Shawn J. and McIntire, Eliot and {Molnár}, {Péter K.} and Simpkins, Craig and Tekwa, Edward and Watts, Alexander and Fortin, {Marie{-}Josée}},
+	year = {2021},
+	month = {12},
+	date = {2021-12},
+	journal = {Ecosphere},
+	pages = {e03869},
+	volume = {12},
+	number = {12},
+	doi = {10.1002/ecs2.3869},
+	url = {https://esajournals.onlinelibrary.wiley.com/doi/10.1002/ecs2.3869},
+	note = {Citation Key: bodner2021},
+	langid = {en}
 }
